feat: 首页详情页