@@ -6,7 +6,9 @@ import com.ppphuang.web.exception.NotFoundException;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -52,12 +54,19 @@ public class TagServiceImpl implements TagService{
         return tagRepository.findAllById(convertToList(ids));
     }
 
+    @Override
+    public List<Tag> listTag(Integer size) {
+        Sort orders = Sort.by(Sort.Direction.DESC, "blogs.size");
+        Pageable pageable = PageRequest.of(0, size, orders);
+        return tagRepository.findTop(pageable);
+    }
+
     private List<Long> convertToList(String ids) {
         List<Long> list = new ArrayList<>();
         if (!"".equals(ids) && ids != null) {
             String[] idarray = ids.split(",");
-            for (int i=0; i < idarray.length;i++) {
-                list.add(new Long(idarray[i]));
+            for (String s : idarray) {
+                list.add(Long.valueOf(s));
             }
         }
         return list;
